--- a/Makefile.in
+++ b/Makefile.in
@@ -24,10 +24,18 @@ endif
 include $(topsrcdir)/config/config.mk
 
 ifneq (mobile/android,$(MOZ_BUILD_APP))
-$(MDDEPDIR)/buildid.h.stub $(MDDEPDIR)/source-repo.h.stub: FORCE
+# We only want to generate buildid.h once, during the export phase.
+ifeq ($(MAKECMDGOALS),buildid.h)
+$(MDDEPDIR)/buildid.h.stub: FORCE
+endif
+ifeq ($(MAKECMDGOALS),source-repo.h)
+$(MDDEPDIR)/source-repo.h.stub: FORCE
+endif
 endif
 source-repo.h: $(MDDEPDIR)/source-repo.h.stub
 buildid.h: $(MDDEPDIR)/buildid.h.stub
+# Add explicit dependencies that moz.build can't declare yet.
+build/$(MDDEPDIR)/application.ini.stub: source-repo.h buildid.h
 
 BUILD_BACKEND_FILES := $(addprefix backend.,$(addsuffix Backend,$(BUILD_BACKENDS)))
 
@@ -83,7 +91,7 @@ ifneq (,$(filter FasterMake+RecursiveMake,$(BUILD_BACKENDS)))
 	@# same directory, because that would blow up
 	$(if $(wildcard _build_manifests/install/$(subst /,_,$*)),$(if $(wildcard faster/install_$(subst /,_,$*)*),$(error FasterMake and RecursiveMake ends of the hybrid build system want to handle $*)))
 endif
-	$(addprefix $(call py_action,process_install_manifest,$(if $(filter copy,$(NSDISTMODE)),--no-symlinks )--track install_$(subst /,_,$*).track $*) ,$(wildcard _build_manifests/install/$(subst /,_,$*)))
+	$(foreach manifest,$(wildcard _build_manifests/install/$(subst /,_,$*)),$(call py_action,process_install_manifest $*,$(if $(filter copy,$(NSDISTMODE)),--no-symlinks )--track install_$(subst /,_,$*).track $* $(manifest)))
 
 # Dummy wrapper rule to allow the faster backend to piggy back
 $(addprefix install-,$(subst /,_,$(filter dist/%,$(install_manifests)))): install-dist_%: install-dist/% ;
@@ -93,16 +101,16 @@ install-tests: install-test-files
 
 .PHONY: install-test-files
 install-test-files:
-	$(call py_action,process_install_manifest,$(if $(filter copy,$(NSDISTMODE)),--no-symlinks )--track install__test_files.track _tests _build_manifests/install/_test_files)
+	$(call py_action,process_install_manifest test/files,$(if $(filter copy,$(NSDISTMODE)),--no-symlinks )--track install__test_files.track _tests _build_manifests/install/_test_files)
 
 include $(topsrcdir)/build/moz-automation.mk
 
 # Dummy rule for the cases below where we don't depend on dist/include
-recurse_pre-export::
+recurse_pre-export:
 
 # For the binaries rule, not all the install manifests matter, so force only
 # the interesting ones to be done.
-recurse_pre-export:: install-manifests
+recurse_pre-export: install-manifests
 binaries::
 	@$(MAKE) install-manifests install_manifests=dist/include
 
@@ -112,13 +120,6 @@ endif
 
 recurse_artifact:
 	$(PYTHON3) $(topsrcdir)/mach --log-no-times artifact install$(if $(MOZ_ARTIFACT_BUILD_SYMBOLS), --symbols$(addprefix =,$(filter full,$(MOZ_ARTIFACT_BUILD_SYMBOLS)))) $(if $(ENABLE_TESTS),,--no-tests) $(verbose_flag)
-
-ifdef MOZ_EME_WIN32_ARTIFACT
-recurse_win32-artifact:
-	rm -rf $(DIST)/i686
-	$(PYTHON3) $(topsrcdir)/mach --log-no-times artifact install --job win32-opt --no-tests --distdir $(DIST)/i686 $(verbose_flag)
-	mv $(DIST)/i686/bin/* $(DIST)/i686
-endif
 
 ifdef MOZ_ANDROID_FAT_AAR_ARCHITECTURES
 recurse_android-fat-aar-artifact:
@@ -152,9 +153,9 @@ include $(topsrcdir)/config/rules.mk
 
 ifdef SCCACHE_VERBOSE_STATS
 default::
-	-$(CCACHE) --show-stats --stats-format=json > sccache-stats.json
+	-$(CCACHE) --show-adv-stats --stats-format=json > '$(UPLOAD_PATH)/sccache-stats.json'
 	@echo "===SCCACHE STATS==="
-	-$(CCACHE) --show-stats
+	-$(CCACHE) --show-adv-stats
 	@echo "==================="
 endif
 
@@ -175,14 +176,14 @@ endif
 .PHONY: symbolsfullarchive
 symbolsfullarchive: prepsymbolsarchive
 	$(RM) '$(DIST)/$(PKG_PATH)$(SYMBOL_FULL_ARCHIVE_BASENAME).tar.zst'
-	$(call py_action,symbols_archive,'$(DIST)/$(PKG_PATH)$(SYMBOL_FULL_ARCHIVE_BASENAME).tar.zst' \
+	$(call py_action,symbols_archive $(SYMBOL_FULL_ARCHIVE_BASENAME).tar.zst,'$(DIST)/$(PKG_PATH)$(SYMBOL_FULL_ARCHIVE_BASENAME).tar.zst' \
                                      $(abspath $(DIST)/crashreporter-symbols) \
                                      --full-archive)
 
 .PHONY: symbolsarchive
 symbolsarchive: prepsymbolsarchive
 	$(RM) '$(DIST)/$(PKG_PATH)$(SYMBOL_ARCHIVE_BASENAME).zip'
-	$(call py_action,symbols_archive,'$(DIST)/$(PKG_PATH)$(SYMBOL_ARCHIVE_BASENAME).zip' \
+	$(call py_action,symbols_archive $(SYMBOL_ARCHIVE_BASENAME).zip,'$(DIST)/$(PKG_PATH)$(SYMBOL_ARCHIVE_BASENAME).zip' \
                                      $(abspath $(DIST)/crashreporter-symbols))
 
 ifdef MOZ_CRASHREPORTER
@@ -195,6 +196,7 @@ buildsymbols: symbolsarchive
 endif # MOZ_ENABLE_FULL_SYMBOLS
 else
 buildsymbols:
+	@echo "Skipping symbols generation because MOZ_CRASHREPORTER is not set."
 endif
 
 uploadsymbols:
