--- a/build.gradle
+++ b/build.gradle
@@ -2,6 +2,49 @@ import org.tomlj.Toml
 import org.tomlj.TomlParseResult
 import org.tomlj.TomlTable
 
+buildscript {
+    repositories {
+        gradle.mozconfig.substs.GRADLE_MAVEN_REPOSITORIES.each { repository ->
+            maven {
+                url repository
+                if (gradle.mozconfig.substs.ALLOW_INSECURE_GRADLE_REPOSITORIES) {
+                    allowInsecureProtocol = true
+                }
+            }
+        }
+    }
+
+    ext {
+        detekt_plugin = Versions.detekt
+        python_envs_plugin = Versions.python_envs_plugin
+        ksp_plugin = Versions.ksp_plugin
+
+        // Used in mobile/android/fenix/app/build.gradle
+        protobuf_plugin = FenixVersions.protobuf_plugin
+    }
+
+    dependencies {
+        classpath 'org.mozilla.apilint:apilint:0.5.2'
+        classpath 'com.android.tools.build:gradle:8.0.2'  // Bug 1881001 for using AC version
+        classpath 'org.apache.commons:commons-exec:1.3'
+        classpath 'com.diffplug.spotless:spotless-plugin-gradle:6.25.0'
+        classpath 'org.tomlj:tomlj:1.1.0'
+        classpath ComponentsDependencies.tools_kotlingradle
+
+        // Used in mobile/android/fenix/app/build.gradle
+        classpath ComponentsDependencies.androidx_safeargs
+        classpath FenixDependencies.osslicenses_plugin
+        classpath FenixDependencies.tools_benchmarkgradle
+        classpath "org.mozilla.telemetry:glean-gradle-plugin:${Versions.mozilla_glean}"
+        classpath "${ApplicationServicesConfig.groupId}:tooling-nimbus-gradle:${ApplicationServicesConfig.version}"
+    }
+}
+
+plugins {
+    id("io.gitlab.arturbosch.detekt").version("$detekt_plugin")
+    id("com.google.devtools.ksp").version("$ksp_plugin")
+}
+
 def tryInt = { string ->
     if (string == null) {
         return string
@@ -29,14 +72,47 @@ def getRustVersionFor(packageName) {
     return version
 }
 
+def now() {
+    Instant now = Instant.now();
+    return now.getEpochSecond() + now.getNano() / 1_000_000_000L;
+}
+
 allprojects {
+    def shouldPrintBuildStatus =
+            System.getenv("MACH") && !System.getenv("NO_BUILDSTATUS_MESSAGES")
+
+    if (shouldPrintBuildStatus) {
+        // Adding new line before each line to make sure they're dumped as a separate line.
+        // Add profile marker to the start of the project evaluation
+        project.beforeEvaluate {
+            println "\nBUILDSTATUS ${now()} START_gradle:evaluate-project ${project.name}"
+        }
+
+        // Add profile marker to the end of the project evaluation
+        project.afterEvaluate {
+            println "\nBUILDSTATUS ${now()} END_gradle:evaluate-project ${project.name}"
+        }
+
+        tasks.configureEach { task ->
+            // Add profile marker to the start of the gradle task
+            task.doFirst {
+                println "\nBUILDSTATUS ${now()} START_gradle-task ${project.name}:${task.name}"
+            }
+
+            // Add profile marker to the end of the gradle task
+            task.doLast {
+                println "\nBUILDSTATUS ${now()} END_gradle-task ${project.name}:${task.name}"
+            }
+        }
+    }
+
     // Expose the per-object-directory configuration to all projects.
     ext {
         mozconfig = gradle.mozconfig
         topsrcdir = gradle.mozconfig.topsrcdir
         topobjdir = gradle.mozconfig.topobjdir
 
-        gleanVersion = "52.7.0"
+        gleanVersion = Versions.mozilla_glean
         if (gleanVersion != getRustVersionFor("glean")) {
           throw new StopExecutionException("Mismatched Glean version, expected: ${gleanVersion}," +
               " found ${getRustVersionFor("glean")}")
@@ -70,6 +146,40 @@ allprojects {
         }
     }
 
+    // Use the semanticdb-javac and semanticdb-kotlinc plugins to generate semanticdb files for Searchfox
+    if (mozconfig.substs.ENABLE_MOZSEARCH_PLUGIN || mozconfig.substs.DOWNLOAD_ALL_GRADLE_DEPENDENCIES) {
+        def targetRoot = new File(topobjdir, "mozsearch_java_index")
+        def semanticdbJavacVersion = "com.sourcegraph:semanticdb-javac:0.9.10"
+        def semanticdbKotlincVersion = "com.sourcegraph:semanticdb-kotlinc:0.4.0"
+
+        afterEvaluate {
+            def addDependencyToConfigurationIfExists = { configurationName, dependency ->
+                def configuration = configurations.findByName(configurationName)
+                if (configuration != null) {
+                    dependencies.add(configurationName, dependency)
+                }
+            }
+
+            addDependencyToConfigurationIfExists("compileOnly", semanticdbJavacVersion)
+            addDependencyToConfigurationIfExists("testCompileOnly", semanticdbJavacVersion)
+            addDependencyToConfigurationIfExists("androidTestCompileOnly", semanticdbJavacVersion)
+            addDependencyToConfigurationIfExists("kotlinCompilerPluginClasspath", semanticdbKotlincVersion)
+        }
+
+        tasks.withType(JavaCompile) {
+            options.compilerArgs += [
+                "-Xplugin:semanticdb -sourceroot:${topsrcdir} -targetroot:${targetRoot}",
+            ]
+        }
+
+        tasks.withType(org.jetbrains.kotlin.gradle.tasks.KotlinCompile) {
+            compilerOptions.freeCompilerArgs.addAll([
+                "-P", "plugin:semanticdb-kotlinc:sourceroot=${topsrcdir}",
+                "-P", "plugin:semanticdb-kotlinc:targetroot=${targetRoot}",
+            ])
+        }
+    }
+
     task downloadDependencies() {
         description 'Download all dependencies to the Gradle cache'
         doLast {
@@ -97,30 +207,6 @@ allprojects {
 }
 
 buildDir "${topobjdir}/gradle/build"
-
-buildscript {
-    repositories {
-        gradle.mozconfig.substs.GRADLE_MAVEN_REPOSITORIES.each { repository ->
-            maven {
-                url repository
-                if (gradle.mozconfig.substs.ALLOW_INSECURE_GRADLE_REPOSITORIES) {
-                    allowInsecureProtocol = true
-                }
-            }
-        }
-    }
-
-    ext.kotlin_version = '1.8.21'
-
-    dependencies {
-        classpath 'org.mozilla.apilint:apilint:0.5.2'
-        classpath 'com.android.tools.build:gradle:7.4.2'
-        classpath 'org.apache.commons:commons-exec:1.3'
-        classpath 'com.diffplug.spotless:spotless-plugin-gradle:6.18.0'
-        classpath 'org.tomlj:tomlj:1.1.0'
-        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
-    }
-}
 
 // A stream that processes bytes line by line, prepending a tag before sending
 // each line to Gradle's logging.
@@ -313,11 +399,24 @@ afterEvaluate {
                 "-Xlint:-serial",
                 // Classfile, because javac has a bug with MethodParameters attributes
                 // with Java 7. https://bugs.openjdk.java.net/browse/JDK-8190452
-                "-Xlint:-classfile",
-                // Turn all remaining warnings into errors,
-                // unless marked by @SuppressWarnings.
-                "-Werror"]
+                "-Xlint:-classfile"]
+
+            // In GeckoView java projects only, turn all remaining warnings
+            // into errors unless marked by @SuppressWarnings.
+            def projectName = project.getName()
+            if (projectName.startsWith('geckoview')
+                || projectName == 'annotations'
+                || projectName == 'exoplayer2'
+                || projectName == 'messaging_example'
+                || projectName == 'port_messaging_example'
+                || projectName == 'test_runner'
+            ) {
+                options.compilerArgs += [
+                        "-Werror"
+                ]
+            }
         }
+
     }
 }
 
@@ -351,23 +450,57 @@ idea {
     }
 }
 
-subprojects {
-    apply plugin: "com.diffplug.spotless"
+subprojects { project ->
+    // Perform spotless lint in GeckoView projects only.
+    def projectName = project.getName()
+    if (projectName.startsWith('geckoview')
+            || projectName == 'annotations'
+            || projectName == 'exoplayer2'
+            || projectName == 'messaging_example'
+            || projectName == 'port_messaging_example'
+            || projectName == 'test_runner'
+    ) {
+        apply plugin: "com.diffplug.spotless"
 
-    spotless {
-        java {
-            target project.fileTree(project.projectDir) {
-                include '**/*.java'
-                exclude '**/thirdparty/**'
+        spotless {
+            java {
+                target project.fileTree(project.projectDir) {
+                    include '**/*.java'
+                    exclude '**/thirdparty/**'
+                }
+                googleJavaFormat('1.17.0')
             }
-            googleJavaFormat('1.17.0')
+            kotlin {
+                target project.fileTree(project.projectDir) {
+                    include '**/*.kt'
+                    exclude '**/thirdparty/**'
+                }
+                ktlint('0.49.1')
+            }
         }
-        kotlin {
-            target project.fileTree(project.projectDir) {
-                include '**/*.kt'
-                exclude '**/thirdparty/**'
+    } else {
+        afterEvaluate {
+            // Set the source and target compatibility for non-GeckoView projects only.
+            if (it.hasProperty('android')) {
+                android {
+                    compileOptions {
+                        sourceCompatibility JavaVersion.VERSION_17
+                        targetCompatibility JavaVersion.VERSION_17
+                    }
+                }
             }
-            ktlint('0.48.2')
+        }
+    }
+
+    project.configurations.configureEach {
+        resolutionStrategy.capabilitiesResolution.withCapability("org.mozilla.telemetry:glean-native") {
+            def toBeSelected = candidates.find {
+                it.id instanceof ProjectComponentIdentifier && it.id.projectName.contains('geckoview')
+            }
+            if (toBeSelected != null) {
+                select(toBeSelected)
+            }
+            because 'use GeckoView Glean instead of standalone Glean'
         }
     }
 }
